fixed contrast issues in footer

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -513,8 +513,13 @@ footer {
   gap: 0.1rem;
 }
 
+footer a {
+  color: var(--secondary-color);
+  text-decoration: none;
+}
+
 footer a:hover {
-  color: var(--accent-color);
+  color: var(--accent2-color);
 }
 
 @media (max-width: 900px) {
